--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "socket.io": "^1.4.8"
   },
   "devDependencies": {
     "babel-preset-env": "^1.6.0"
