--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "express": "^4.14.0",
+    "moment": "^2.15.1",
     "socket.io": "^1.4.8"
   },
   "devDependencies": {
